--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,19 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  # timeout: 5000
 
 development:
   <<: *default
+  # adapter: postgresql
+  # encoding: unicode
   database: lah_db
+  # pool: 5
+  # username:
+  # password:
+  # min_messages: WARNING
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
